# EXODUS-kernel

./: .gitignore  Cargo.toml  Makefile  README.md  TCP  build.rs  dava_boot_talk.py  dava_bridge.py  dava_kernel_log.txt  launch_dava.bat  linker.ld  serial_crash.txt  x86_64-hoags.json
.cargo/: config.toml
dashboard/: dava_senses.py  desktop.html  dialogue_manager.py  knowledge_index.py  knowledge_ingest.py  memory_store.py  self_learning.py  server.py
dashboard/dava_memory/: _sync_state.json  art_gallery.json  conversations.jsonl  dialogue_state.json  knowledge.jsonl  knowledge_index.json  learned_facts.jsonl  milestones.json  prediction_log.jsonl  sense_events.jsonl  state_snapshots.jsonl
src/: acpi.rs  apic.rs  boot.rs  boot_protocol.rs  boot_uefi.rs  cpu.rs  dma.rs  gdt.rs  interrupts.rs  io.rs  ioapic.rs  kernel_log.rs  log.rs  main.rs  pci.rs  percpu.rs  scheduler.rs  serial.rs  smp.rs  vga.rs
src/accessibility/: ai_accessibility.rs  captions.rs  color_correction.rs  magnification.rs  mod.rs  screen_reader.rs
src/agent/: agent_teams.rs  agentic_loop.rs  browser_agent.rs  code_agent.rs  code_intel.rs  evaluator.rs  file_agent.rs  memory.rs  mod.rs  permission.rs  planner.rs  safety.rs  sandbox.rs  sessions.rs  skills.rs  streaming.rs  system_agent.rs  tool_engine.rs
src/ai/: anomaly.rs  assistant.rs  automation.rs  classifier.rs  context.rs  document_analysis.rs  embeddings.rs  feedback_loop.rs  inference.rs  intelligence.rs  knowledge.rs  memory_graph.rs  mod.rs  model_router.rs  multimodal.rs  neural_bus.rs  nlp.rs  planning.rs  (+15 more)
tools/: dava_watcher.py
(+2332 files in other folders)
