[package]
name = "hoags-kernel"
version = "0.9.0"
edition = "2021"
authors = ["Hoags Inc"]
description = "Hoags Kernel Genesis — bare-metal x86_64 operating system kernel"
build = "build.rs"

# No external bootloader — we boot from our own assembly stub (boot/boot.asm)
[dependencies]
# Zero external dependencies — everything built from scratch

[profile.dev]
panic = "abort"
opt-level = 1   # Eliminates large stack-frame temporaries from struct assignments

[profile.release]
panic = "abort"
